Prevent out-of-view sections from spilling over into current section

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -18,6 +18,7 @@
   opacity: 1;
 
   transition: border v.$theme-toggle-transition-duration ease,
+    background-color v.$theme-toggle-transition-duration ease,
     opacity 800ms linear, transform 800ms ease;
 }
 
@@ -52,11 +53,13 @@
 }
 
 .button-container-dark {
+  background-color: v.$primary-color-dark;
   color: v.$accent-color;
   border: 2px solid v.$accent-color;
 }
 
 .button-container-light {
+  background-color: v.$primary-color-light;
   color: v.$secondary-color-four;
   border: 2px solid v.$secondary-color-four;
 }
