--- a/src/sections/AboutSection/AboutSection.module.scss
+++ b/src/sections/AboutSection/AboutSection.module.scss
@@ -6,6 +6,8 @@
   background-position: center;
   background-size: cover;
   @include m.color-transition;
+
+  overflow: hidden;
 }
 
 .about-content {
