--- a/src/sections/ProjectsSection/ProjectsSection.module.scss
+++ b/src/sections/ProjectsSection/ProjectsSection.module.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   @include m.section-dimensions;
   @include m.color-transition;
+  overflow: hidden;
 }
 
 .header {
